Please read description
- Added a local DB
- Local storage for exercise & workout
- Repositories for exercies & workout
- Fragments for exercisedetail & workout add/detail
- Fragment Arguments for passing ID’s
- Fixed workout url endpoint
- Added permissions for manifest
- Renamed some classes and variables and functions
- Added animations for activity switching
- Changed AlertDialogs to Snackbar
- Reformated code & Optimized imports
- Deleted Personal Schedule

--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -7,15 +7,28 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:theme="@style/AppTheme.AppBarOverlay"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorAccent"
+            android:gravity="center">
 
+            <TextView
+                android:id="@+id/titleToolbar"
+                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-light"
+                android:text="Title"
+                android:textColor="@color/white"
+
+                android:textStyle="bold" />
+        </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
