--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -13,7 +13,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="sport.tsse.com.sportapp.SingleFragmentNavigationActivity">
+        tools:context="sport.tsse.com.sportapp.base.SingleFragmentNavigationActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
