--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent"
+    android:background="@drawable/exercise_detail_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,22 +20,23 @@
             android:padding="16dp">
 
             <TextView
+                android:id="@+id/detailWorkoutName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="sans-serif-light"
-                tools:text="Workout Name"
                 android:textAllCaps="true"
                 android:textColor="#3C3B3A"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="Workout Name" />
 
             <TextView
                 android:id="@+id/addWorkoutDescriptionEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
-                tools:text="@string/description"
-                android:maxLines="4" />
+                android:maxLines="4"
+                tools:text="@string/description" />
         </LinearLayout>
 
         <LinearLayout
