--- a/app/src/main/res/layout/fragment_schedule_detail.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail.xml
@@ -33,6 +33,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:textColor="#3C3B3A"
+            android:textStyle="bold"
+            android:id="@+id/scheduleDescriptionTextView"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/workouts"
@@ -41,7 +49,7 @@
             android:textStyle="bold" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/scheduleWorkoutRecyclerView"
+            android:id="@+id/workoutList"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
