--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#3C3B3A</color>
-    <color name="colorAccent">#3C3B3A</color>
+    <color name="colorPrimaryDark">#34495e</color>
+    <color name="colorAccent">#34495e</color>
 
     <color name="white">#FFFFFF</color>
     <color name="grey">#EDEDED</color>
