Added bench press gif and fixed a typo

--- a/app/src/main/res/layout/list_item_schedule.xml
+++ b/app/src/main/res/layout/list_item_schedule.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/minus_seperator"
+        android:text="@string/minus_separator"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scheduleNameTextView"
