--- a/app/src/main/res/layout/fragment_schedule_detail.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail.xml
@@ -25,11 +25,24 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            tools:text="Schedule Name:"
             android:textAllCaps="true"
             android:textColor="#3C3B3A"
             android:textStyle="bold"
-            android:id="@+id/scheduleNameTextView"/>
+            android:id="@+id/scheduleNameInfoTextView" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scheduleNameTextView" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Description"
+            android:textAllCaps="true"
+            android:textColor="#3C3B3A"
+            android:textStyle="bold"
+            android:id="@+id/scheduleDescriptionInfoTextView" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
