--- a/app/src/main/res/layout/list_item_schedule.xml
+++ b/app/src/main/res/layout/list_item_schedule.xml
@@ -18,47 +18,10 @@
         android:textStyle="bold"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        android:layout_marginTop="8dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/dateSeperatorTextView"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/dateSeperatorTextView" />
-
-    <TextView
-        android:id="@+id/startDateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="start date "
-        app:layout_constraintRight_toLeftOf="@+id/dateSeperatorTextView"
-        app:layout_constraintBaseline_toBaselineOf="@+id/dateSeperatorTextView"
-        tools:layout_constraintBaseline_creator="1"
-        android:layout_marginRight="8dp" />
-
-    <TextView
-        android:id="@+id/dateSeperatorTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:text="@string/minus_seperator"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scheduleNameTextView"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <TextView
-        android:id="@+id/endDateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="end date"
-        app:layout_constraintLeft_toRightOf="@+id/dateSeperatorTextView"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/dateSeperatorTextView"
-        tools:layout_constraintBaseline_creator="1" />
-
-
+        tools:layout_editor_absoluteX="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 </android.support.constraint.ConstraintLayout>
