Refactored exercise a bit and added some new stuff
- Favorites now work
- You can now Search the exercise list
- Images and GIFS can now be loaded in the image views
- Refactored the repositories and database schemes with the help of ANKO library

--- a/app/src/main/res/layout/fragment_exercise_detail.xml
+++ b/app/src/main/res/layout/fragment_exercise_detail.xml
@@ -19,6 +19,7 @@
             android:padding="16dp">
 
             <ImageView
+                android:id="@+id/detailImage"
                 android:layout_width="match_parent"
                 android:layout_height="190dp"
                 android:src="@drawable/bench_press" />
@@ -57,12 +58,13 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/detailFavorite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_favorite_grey" />
+                    android:src="@drawable/ic_favorite" />
             </RelativeLayout>
 
         </LinearLayout>
