--- a/app/src/main/res/layout/list_item_exercise.xml
+++ b/app/src/main/res/layout/list_item_exercise.xml
@@ -9,7 +9,7 @@
     android:padding="16dp">
 
     <ImageView
-        android:id="@+id/icon_image"
+        android:id="@+id/exerciseListItemIconImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
@@ -21,11 +21,11 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/icon_image"
+        android:layout_toEndOf="@id/exerciseListItemIconImageView"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/icon_image">
+        android:layout_toRightOf="@id/exerciseListItemIconImageView">
 
         <TextView
             android:id="@+id/exerciseListItemTitleTextView"
