--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">#EDEDED</color>
     <color name="titleText">#3C3B3A</color>
+    <color name="cursorAccent">#FFFFFF</color>
 
 </resources>
