Finished user registration

--- a/app/src/main/res/layout/fragment_onboarding_password_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_password_input.xml
@@ -65,15 +65,6 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone" />
-
-    <include layout="@layout/onboarding_fab"
-        android:visibility="visible"/>
+    <include layout="@layout/onboarding_fab" />
 
 </android.support.design.widget.CoordinatorLayout>
