--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
+    <item name="please_wait" type="id">Please wait...</item>
+    <item name="onboarding_post_message" type="id">Creating your account</item>
 </resources>
